--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ main {
 }
 
 form {
-    width: 75%;
+    width: clamp(150px, 50%, 75%);;
     display: flex;
     align-items: center;
     gap: 0.6em;
@@ -62,6 +62,10 @@ form {
 form > button {
     background-color: transparent;
     border: none;
+}
+
+form > button:hover {
+    cursor: pointer;
 }
 
 .upper img {
@@ -86,6 +90,32 @@ form > button {
 .right a:visited {
     color: white;
     text-decoration: none;
+}
+
+.dropdown {
+    position: relative;
+    height: 40px;
+    margin-top: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dropdown-content {
+    background-color: rgb(58, 58, 70);
+    text-align: center;
+    font-style: italic;
+    font-weight: 300;
+    width: 180px;
+    display: none;
+    padding: 12px;
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+}
+
+.dropdown:hover .dropdown-content {
+    display: inline-block;
 }
 
 .lower {
