--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700;800&display=swap');
 
 body {
+    color: white;
     font-family: 'Open Sans', sans-serif;
     margin: 0;
     display: flex;
@@ -17,6 +18,15 @@ body {
     height: auto;
     width: 180px;
     margin: 8px;
+}
+
+ul {
+    list-style: none;
+    font-weight: 700;
+    margin-block-start: 3em;
+    display: flex;
+    flex-direction: column;
+    gap: 0.9em;
 }
 
 main {
@@ -86,8 +96,8 @@ form > button:hover {
     gap: 2em;
 }
 
-.right a,
-.right a:visited {
+a,
+a:visited {
     color: white;
     text-decoration: none;
 }
@@ -111,7 +121,7 @@ form > button:hover {
     padding: 12px;
     position: absolute;
     z-index: 1;
-    top: 100%;
+    top: 120%;
 }
 
 .dropdown:hover .dropdown-content {
