--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,13 @@ body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
     display: flex;
-    min-width: 100vw;
+    min-height: 100vh;
+    min-width: 100vh;
 }
 
 #sidebar {
     background-color: rgb(18, 18, 22);
-    height: 100vh;
-    width: 200px;
+    width: 250px;
 }
 
 #logo {
@@ -172,4 +172,81 @@ h2, h4 {
 #tile-area {
     flex: 1;
     display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+}
+
+#tile-area > div {
+    padding: 2em 1em;
+    display: grid;
+}
+
+#tile-area > div > h4 {
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+}
+
+#your-projects {
+    grid-row: 1 / 4;
+    grid-column: 1 / 4;
+    grid-template-rows: 1.8em repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+}
+
+#announcements,
+#trending {
+    margin-left: -2em;
+    grid-row: 1 / 2;
+    grid-column: 4 / 5;
+    grid-template-rows: 1.8em 1fr;
+}
+
+#announcements {
+    margin-bottom: -2em;
+}
+
+#trending {
+    margin-top: -2em;
+    grid-row: 2 / 3;
+}
+
+.tile,
+.vert-box {
+    background-color: rgb(58, 58, 70);
+    margin: 1em 1.5em 1em 0;
+    padding: 0 1.5em 1.5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.vert-box {
+    padding: 1em;
+}
+
+#tile-area p {
+    font-size: 0.9em;
+}
+
+.tile-btns {
+    align-self: flex-end;
+}
+
+.trending-user {
+    display: flex;
+    align-items: center;
+}
+
+.trending-user p {
+    margin: 8px;
+}
+
+.trending-user img {
+    height: auto;
+    width: 46px;
+}
+
+.trending-tag {
+    font-weight: bold;
 }
